; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-atm/src/extr_ltq_atm.c_ppe_change_qos.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-atm/src/extr_ltq_atm.c_ppe_change_qos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atm_vcc = type { i32 }
%struct.atm_qos = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.atm_vcc*, %struct.atm_qos*, i32)* @ppe_change_qos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ppe_change_qos(%struct.atm_vcc* %0, %struct.atm_qos* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.atm_vcc*, align 8
  %6 = alloca %struct.atm_qos*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.atm_vcc* %0, %struct.atm_vcc** %5, align 8
  store %struct.atm_qos* %1, %struct.atm_qos** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.atm_vcc*, %struct.atm_vcc** %5, align 8
  %10 = icmp eq %struct.atm_vcc* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load %struct.atm_qos*, %struct.atm_qos** %6, align 8
  %13 = icmp eq %struct.atm_qos* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %11, %3
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %30

17:                                               ; preds = %11
  %18 = load %struct.atm_vcc*, %struct.atm_vcc** %5, align 8
  %19 = call i32 @find_vcc(%struct.atm_vcc* %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %17
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %4, align 4
  br label %30

25:                                               ; preds = %17
  %26 = load %struct.atm_vcc*, %struct.atm_vcc** %5, align 8
  %27 = load %struct.atm_qos*, %struct.atm_qos** %6, align 8
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @set_qsb(%struct.atm_vcc* %26, %struct.atm_qos* %27, i32 %28)
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %25, %22, %14
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @find_vcc(%struct.atm_vcc*) #1

declare dso_local i32 @set_qsb(%struct.atm_vcc*, %struct.atm_qos*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
